# mantis-ai

./: .gitignore  BENCHMARK-SUMMARY-2026-04-05.md  CLAUDE-CODE-DEEP-RESEARCH-2026-04-03.md  CLAUDE.md  CODEX-PLAN-DEMOS.md  CODEX-PLAN-README.md  CONTRIBUTING.md  LICENSE  MANTIS.md  NEXT-STEPS.md  NOTEBOOKLM_BENCHMARK_UPDATE_2026-04-03.md  NOTEBOOKLM_PROGRESS.md  PRODUCT.md  README.md  ROADMAP-30D.md  SHOW_HN.md  fibonacci.py  pyproject.toml
.github/workflows/: ci.yml
demos/: README.md  lead_gen.py  prediction_market.py  sports_analytics.py
lore/docs/: FOUNDER_BUILD_BRIEF.md  FOUR_WEEK_EXECUTION_PLAN.md  LAUNCH_COPY.md  POSITIONING_COPY.md  TASK_BOARD.md
mantis/: __init__.py  __main__.py  app.py  cli.py  dashboard.html  rate_limiter.py  server.py
mantis/agents/: orchestrator.py  spawner.py
mantis/core/: __init__.py  activity_store.py  approval_store.py  compressor.py  context_manager.py  diff_preview.py  hooks.py  (+14 more)
scripts/: curated_live_benchmark.py  full_validation_pack.py  live_benchmark.py  scenario_benchmark.py  stress_benchmark.py
task1/: check_token_bucket.py  token_bucket.py
tests/: test_activity_store.py  test_agentic_loop.py  test_approval_store.py  test_ast_extractor.py  test_cli.py  test_core.py  test_diff_preview.py  test_edit_applicator.py  test_fibonacci.py  test_job_store.py  test_orchestrator.py  test_permissions.py  test_planner.py  test_quality_cascade.py  test_quality_gate.py  test_semantic_tools.py  test_server_background.py  test_server_serialization.py  test_session_store.py  test_trace_store.py  test_vigil.py  test_worktree_manager.py
(+8 files in other folders)
