[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mantisai"
version = "0.1.0"
description = "Open source agent OS — orchestrate any LLM as a coding agent"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MantisAI Contributors"}
]
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "pyyaml",
    "fastapi",
    "uvicorn[standard]"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]

[tool.setuptools.packages.find]
include = ["mantis*"]

[project.scripts]
mantisai = "mantis.cli:main"
